Removed duplicate response

--- a/src/app/pages/user/instructions/instructions.component.html
+++ b/src/app/pages/user/instructions/instructions.component.html
@@ -1,11 +1,11 @@
-<ngx-ui-loader
+<!-- <ngx-ui-loader
 fgsColor="#ff4081"
 pbColor="#ff4081"
 textColor="#ff4081"
 pbThickness="6"
 text="Loading instructions"
 ></ngx-ui-loader>
-
+ -->
 
 
 
@@ -16,7 +16,7 @@ text="Loading instructions"
 {{currentUserId | json}}
 {{reportQuizId | json}} -->
 
-<div ngxUiLoaderBlurred (blur)="10">
+<!-- <div ngxUiLoaderBlurred (blur)="10"> -->
 <div class="">
     <div class="contianer card">
         <div class="row">
