--- a/src/app/pages/user/load-quiz/load-quiz.component.html
+++ b/src/app/pages/user/load-quiz/load-quiz.component.html
@@ -1,26 +1,12 @@
-<ngx-ui-loader fgsColor="#ff4081" pbColor="#ff4081" textColor="#ff4081" pbThickness="6"
+<!-- <ngx-ui-loader fgsColor="#ff4081" pbColor="#ff4081" textColor="#ff4081" pbThickness="6"
   text="Loading information!"></ngx-ui-loader>
 
 
 <div ngxUiLoaderBlurred (blur)="10">
 
 
-
-  <!-- 
-<div class="bootstrap">
-    <div class="container-fluid">
-        <h1 class="mt20">Quizzes Available</h1>
-        <div class="row mt20">
-            <div class="col-md-4 mt20">
-
-                <h1>Welcome to User dashboard</h1>
-
-
-
-        </div>        
-    </div> --->
     
-</div> 
+</div>  -->
 
 
   <!-- {{reportData |json}}
