--- a/src/app/pages/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/pages/user/user-dashboard/user-dashboard.component.html
@@ -1,6 +1,6 @@
-<div class="bootstrap-wrapper">
+<!-- <div class="bootstrap-wrapper">
     <div class="container-fluid">
-        <div class="row">
+        <div class="row"> -->
 
             <!-- <div class="col-md-2">
                 <app-navbar></app-navbar>
@@ -11,12 +11,11 @@
                 <router-outlet></router-outlet>
             </div> -->
 
-            <div class="col-md-12">
+            <!-- <div class="col-md-12">
                 <app-navbar></app-navbar>
             
-            <!-- <router-outlet></router-outlet> -->
             </div>
 
         </div>
     </div>
-</div>
+</div> -->
