--- a/src/app/pages/user/register-courses/register-courses.component.html
+++ b/src/app/pages/user/register-courses/register-courses.component.html
@@ -1,8 +1,8 @@
-<ngx-ui-loader fgsColor="#ff4081" pbColor="#ff4081" textColor="#ff4081" pbThickness="6"
+<!-- <ngx-ui-loader fgsColor="#ff4081" pbColor="#ff4081" textColor="#ff4081" pbThickness="6"
 	text="Loading information!"></ngx-ui-loader>
 
 
-<div ngxUiLoaderBlurred (blur)="50">
+<div ngxUiLoaderBlurred (blur)="50"> -->
 
 	<!-- {{selectedCategories | json}} -->
 
