--- a/src/app/pages/user/sidebar/sidebar.component.html
+++ b/src/app/pages/user/sidebar/sidebar.component.html
@@ -1,29 +1,116 @@
+ <!-- IF LOGGED IN NAVBAR ENDS-->
+ <mat-drawer-container autosize>
+        <mat-drawer #drawer opened="true" mode="side" position="start">
+          <mat-nav-list>
+            <!-- <mat-list-item>
+            <button routerLink="card" mat-button><mat-icon>dashboard</mat-icon> Dashboard</button>
+          </mat-list-item> -->
+            <mat-list-item>
+              <button mat-button routerLink="/user-dashboard/0"> <mat-icon>home</mat-icon> Home</button>
+            </mat-list-item>
+            <mat-list-item>
+              <button mat-button routerLink="/user-dashboard/register"> <mat-icon>explore</mat-icon>Register
+                Courses</button>
+            </mat-list-item>
+  
+            <mat-list-item>
+              <button mat-button routerLink="/user-dashboard/courses"> <mat-icon>table</mat-icon>Available
+                Courses</button>
+            </mat-list-item>
+            <mat-list-item>
+              <button mat-button routerLink="/user-dashboard/quizzes"> <mat-icon>settings</mat-icon>Available
+                Quizzes</button>
+            </mat-list-item>
+  
+  
+  
+            <mat-list-item>
+              <button mat-button (click)="openUpdateDialog(updateDialog)">
+                <mat-icon class="icon-position">add</mat-icon> &nbsp;Send us a Mail</button>
+            </mat-list-item>
+  
+  
+            <mat-list-item>
+              <button (click)="logout()" mat-button>
+                <mat-icon>Logout</mat-icon>Logout</button>
+            </mat-list-item>
+  
+            <!-- <mat-list-item>
+            <button mat-button><mat-icon>analytics</mat-icon> analytics</button>
+          </mat-list-item> -->
+          </mat-nav-list>
+        </mat-drawer>
+        <mat-drawer-content>
+  
+          <div style="text-align: center;min-height: 600px;">
+            <!-- <app-load-quiz></app-load-quiz> -->
+  
+  
+            <!-- <router-outlet></router-outlet> -->
+  
+            
+          </div>
+  
+  
+        </mat-drawer-content>
+      </mat-drawer-container>
 
-<!-- 
-<mat-card>
-    <mat-action-list>
-        <div mat-subheader>Info Section</div>
-
-        <button mat-list-item mat-list-item routerLink="/user-dashboard/0"> <mat-icon mat-list-icon
-                class="icon-position">quiz</mat-icon> &nbsp; Home</button>
 
 
-        <button mat-list-item mat-list-item routerLink="/user-dashboard/register"> <mat-icon mat-list-icon
-                class="icon-position">quiz</mat-icon> &nbsp;Register Courses</button>
 
-
-        <button mat-list-item mat-list-item routerLink="/user-dashboard/courses"> <mat-icon mat-list-icon
-                class="icon-position">quiz</mat-icon> &nbsp;Available Courses</button>
-
-        <button mat-list-item mat-list-item routerLink="/user-dashboard/quizzes"> <mat-icon mat-list-icon
-                class="icon-position">quiz</mat-icon> &nbsp;Available Quizzes</button>
-
-        <button (click)="logout()" mat-list-item>
-            <mat-icon mat-list-icon class="icon-position">logout</mat-icon>Logout
-        </button>
-
-    </mat-action-list>
-</mat-card> -->
-
-<!-- {{categories | json}} -->
-<!-- alt + shift + downkey => paste option -->
+      <!-- POP UP DIALOG BOX TO EDIT THEORY  -->
+    <ng-template #updateDialog let-data="data">
+        <h1 mat-dialog-title>Send your inquiry or complaint</h1>
+        <div mat-dialog-content>
+  
+          <!-- <form onsubmit="updateTheoryQuestion()"> -->
+            <mat-form-field class="mw450">
+              <input matInput  [(ngModel)]="mailInfo.mailTo" name="mailTo" disabled>
+              <!-- <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                Please enter a valid email address
+              </mat-error> -->
+              <!-- <mat-error *ngIf="emailFormControl.hasError('required')">
+                Email is <strong>required</strong>
+              </mat-error> -->
+            </mat-form-field>
+  
+            <mat-form-field class="mw450">
+              <input matInput placeholder="Sender Email" [formControl]="emailFormControl" [(ngModel)]="mailInfo.mailFrom"
+                name="mailFrom" focus>
+              <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                Please enter a valid email address
+              </mat-error>
+              <mat-error *ngIf="emailFormControl.hasError('required')">
+                Email is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>
+  
+  
+            <mat-form-field class="mw450">
+              <input matInput placeholder="Email Subject" [(ngModel)]="mailInfo.mailSubject"
+                name="mailSubject">
+              <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                Please enter a Subject
+              </mat-error>
+              <mat-error *ngIf="emailFormControl.hasError('required')">
+                Subject is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>
+  
+  
+            <mat-form-field class="mw450">
+              <mat-label>Message</mat-label>
+              <textarea matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" name="mailContent"
+                [(ngModel)]="mailInfo.mailContent" cdkAutosizeMinRows="5" cdkAutosizeMaxRows="10"></textarea>
+            </mat-form-field>
+  
+  
+  
+  
+            <div mat-dialog-actions>
+              <button mat-button (click)="dialogRef.close()">Cancel</button>
+              <button mat-button (click)="sendEmail()">Send Mail</button>
+            </div>
+          <!-- </form> -->
+        </div>
+      </ng-template>
