--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -2,11 +2,11 @@
 <!-- {{groupedQuestions | json}} -->
 
 
-<ngx-ui-loader fgsColor="#ff4081" pbColor="#ff4081" textColor="#ff4081" pbThickness="6"
+<!-- <ngx-ui-loader fgsColor="#ff4081" pbColor="#ff4081" textColor="#ff4081" pbThickness="6"
     text="Loading information!"></ngx-ui-loader>
 
 
-<div ngxUiLoaderBlurred (blur)="10">
+<div ngxUiLoaderBlurred (blur)="10"> -->
     <div class="bootstrap-wrapper" *ngIf="!isSubmit">
         <div class="container-fluid">
             <div class="row">
@@ -337,6 +337,6 @@
 
 
 
-</div>
+<!-- </div> -->
 
 <!-- {{groupedQuestions | json}} -->
