Removed duplicate response

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,15 @@ pbThickness="6"
 text="Loading information!"
 ></ngx-ui-loader> -->
 
+<!-- <ngx-ui-loader
+fgsColor="#ff4081"
+pbColor="#ff4081"
+textColor="#ff4081"
+pbThickness="6"
+text="Loading instructions"
+></ngx-ui-loader> -->
+
+
 
 <!-- <div ngxUiLoaderBlurred (blur)="10"> -->
 
