--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,14 @@
+<!-- <ngx-ui-loader
+fgsColor="#ff4081"
+pbColor="#ff4081"
+textColor="#ff4081"
+pbThickness="6"
+text="Loading instructions"
+></ngx-ui-loader> -->
+
+
+
+
 <div class="navbar">
 
 
@@ -84,7 +95,11 @@
 
         <div style="text-align: center;min-height: 600px;">
           <!-- <app-load-quiz></app-load-quiz> -->
+
+
           <router-outlet></router-outlet>
+
+          
         </div>
 
 
