--- a/src/app/pages/user/print-quiz/print-quiz.component.html
+++ b/src/app/pages/user/print-quiz/print-quiz.component.html
@@ -162,7 +162,7 @@
                                     </span>
                                   </div>
                                   
-                                  <div *ngIf="!items.keyMissed || items.keyMissed.length === 0" class="no-missing-elements">
+                                  <div *ngIf="!items.keyMissed || items.keyMissed.length <= 0" class="no-missing-elements">
                                     <strong class="no-missing-title">Great Work!</strong>
                                     <span class="no-missing-message">
                                      No Suguestions
