--- a/src/app/pages/user/start/start.component.css
+++ b/src/app/pages/user/start/start.component.css
@@ -95,12 +95,22 @@ width: 1px;
     text-align: center;
   }
   
-  /* .fixed-card {
+
+
+  .no-select {
+    user-select: none;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none;    /* Firefox */
+    -ms-user-select: none;     /* IE10+/Edge */
+  }
+
+  
+  .staticCard{
     position: fixed;
-    top: 33px;
-    right: -10px;
-    z-index: 1;
-  } */
+    max-width: 220px; 
+
+}
   
   
 
+ 
