--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -6,7 +6,14 @@
     text="Loading information!"></ngx-ui-loader>
 
 
+
 <div ngxUiLoaderBlurred (blur)="10"> -->
+
+    <!-- {{currentQuestions| json}}
+
+    <hr> -->
+    <!-- {{saved}} -->
+
     <div class="bootstrap-wrapper" *ngIf="!isSubmit">
         <div class="container-fluid">
             <div class="row">
@@ -163,7 +170,7 @@
                                 </mat-card>
 
                                 <!-- <div *ngIf="currentQuestions"> -->
-                                <div *ngFor="let question of currentQuestions">
+                                <div *ngFor="let question of currentQuestions; let i = index">
 
                                     <mat-card-content class="mat-card-content">
                                         <input type="checkbox" [checked]="question.selected"
@@ -179,24 +186,24 @@
                                           </mat-label>
                                       
                                           <textarea class="input"
-                                                    name="givenAnswer"
+                                                    [name]="'givenAnswer' + i"
                                                     [(ngModel)]="question.givenAnswer"
                                                     matInput
                                                     rows="2"
-                                                    >
-
+                                                    (ngModelChange)="saveAnswers()"   
+                                                   
                                                     >
                                           </textarea>
-                                          <!-- (paste)="disablePaste($event)" -->
+                                          <!-- (paste)="disablePaste($event)" NO paste option--> 
                                         </mat-form-field>
                                       </mat-card-content>
 
-                                      
                                     <!-- {{question | json}} -->
 
                                 </div>
                                 <!-- </div> -->
                             </form>
+
                             <mat-card-actions>
                                 <mat-card>
                                     <div class="container navselect">
@@ -204,8 +211,9 @@
                                             <div class="col-md-6">
                                                 <div class="pagination-controls">
                                                     <button type="submit" mat-raised-button color="primary"
-                                                    (ngModelChange)="saveProgress()" (click)="prevPage()"
-                                                      (ngModelChange)="loadSavedProgress()"  [disabled]="currentPage === 0">Previous</button>
+                                                     (click)="prevPage()"
+                                                    
+                                                       [disabled]="currentPage === 0">Previous</button>
                                                     <span
                                                         style="color: blueviolet; font-size: large; border: 2px solid red;">
 
@@ -213,7 +221,7 @@
                                                         prefixes[prefixes.length-1]}}
                                                     </span>
                                                     <button type="submit" mat-raised-button color="primary"
-                                                    (ngModelChange)="loadSavedProgress()" (click)="saveProgress()"  (click)="nextPage()"
+                                                    (click)="nextPage()"
                                                         [disabled]="currentPage === prefixes.length - 1">Next</button>
                                                 </div>
                                             </div>
