Disable copy and pasting

--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -191,7 +191,7 @@
                                                     matInput
                                                     rows="2"
                                                     (ngModelChange)="saveAnswers()"   
-                                                   
+                                                    (paste)="disablePaste($event)"
                                                     >
                                           </textarea>
                                           <!-- (paste)="disablePaste($event)" NO paste option--> 
