--- a/src/app/pages/user/start/start.component.css
+++ b/src/app/pages/user/start/start.component.css
@@ -114,3 +114,16 @@ width: 1px;
   
 
  
+
+
+
+
+/* SPINNER CSS */
+
+.loading-spinner {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+}
