--- a/src/app/pages/user/available-quizzes/available-quizzes.component.html
+++ b/src/app/pages/user/available-quizzes/available-quizzes.component.html
@@ -1,100 +1,122 @@
-
 <!-- {{categories |json}} -->
 <!-- {{userRecords | json}} -->
 
 
-
-<mat-card>
-    <div *ngIf="userRecords.length > 0; else elseBlock">
-    <h4 class=" text-center">Current Quizzes available</h4>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-2">
-                <form>
-                    <br />
-                    <mat-form-field appearance="fill" class="">
-                        <mat-label>Select Course</mat-label>
-                        <mat-select name="category" [(ngModel)]="categories.cid"
-                            (selectionChange)="onQuizOptionSelected()">
-                            <mat-option *ngFor="let c of userRecords" [value]="c.category.cid">
-                                {{c.category.title}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </form>
+<mat-card style="margin-top: 30px;">
+    <!-- Main loading spinner -->
+    <div *ngIf="isLoadingUserRecords" class="loading-container">
+        <button mat-raised-button color="accent" class="loading-button">
+            <div class="button-content">
+                <span>Loading, Please Wait ...</span>
             </div>
-            <div class="col-md-9 offset-md-1">
-                <div class="row mt20" *ngIf="availablequizzes">
-                    <div class="col-md-6 mt20" *ngFor="let q of availablequizzes">
-                        <!-- <h1 class="mt20">Quizzes Available</h1> -->
-                        <mat-card mb20>
-                            <mat-card-header>
-                                <div mat-card-avatar class="exmple-header-image">
-                                </div>
-                                <mat-card-title>
-                                    {{q.title}}
-                                </mat-card-title>
-                                <mat-card-subtitle>
-                                    {{q.category.courseCode}} | {{q.category.title}}
-                                </mat-card-subtitle>
-                            </mat-card-header>
-                            <mat-card-content>
-                                <p class="truncate"> {{q.description}}</p>
-                            </mat-card-content>
-                            <mat-card-action>
-                                <button mat-button color="primary" matTooltip="Summary Results"
-                                    aria-label="Button that displays a tooltip when focused or hovered over"
-                                    (click)="openNew(q.qId)">View </button>
-                                <button mat-button color="accent"
-                                    [routerLink]="'/user-dashboard/instructions/'+q.qId">Start</button>
-                                <button mat-button color="accent"> {{q.numberOfQuestions}} Questions</button>
-                                <button mat-button color="accent">{{q.maxMarks}} Marks</button>
-                            </mat-card-action>
-                        </mat-card>
+        </button>
+    </div>
+
+    <div *ngIf="!isLoadingUserRecords">
+        <div *ngIf="userRecords.length > 0; else elseBlock">
+            <h4 class="text-center">Current Quizzes available</h4>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-2">
+                        <form>
+                            <br />
+                            <!-- Course selection loading -->
+                            <mat-spinner *ngIf="isLoadingCategories" diameter="30" class="mb-2"></mat-spinner>
+                            <mat-form-field appearance="fill">
+                                <mat-label>Select Course</mat-label>
+                                <mat-select name="category" [(ngModel)]="categories.cid"
+                                    (selectionChange)="onQuizOptionSelected()">
+                                    <mat-option *ngFor="let c of userRecords" [value]="c.category.cid">
+                                        {{c.category.title}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </form>
                     </div>
-                    <div class="col-md-12" *ngIf="availablequizzes.length==0">
-                        <!-- <mat-card>
-                        <mat-card-content> -->
-                        <h1>No quizzes available for this course</h1>
-                        <!-- </mat-card-content>
-                    </mat-card> -->
+
+                    <div class="col-md-9 offset-md-1">
+                        <!-- Quizzes loading spinner -->
+                        <!-- <mat-spinner *ngIf="isLoadingQuizzes" diameter="40" class="my-3 mx-auto"></mat-spinner> -->
+
+                        <div *ngIf="isLoadingQuizzes" class="loading-container">
+                            <button mat-raised-button color="accent" class="loading-button">
+                                <div class="button-content">
+                                    <span>Loading, available quizes ...</span>
+                                </div>
+                            </button>
+                        </div>
+
+                        <div class="row mt20" *ngIf="availablequizzes && !isLoadingQuizzes">
+                            <div class="col-md-6 mt20" *ngFor="let q of availablequizzes">
+                                <mat-card>
+                                    <mat-card-header>
+                                        <div mat-card-avatar class="exmple-header-image"></div>
+                                        <mat-card-title>{{q.title}}</mat-card-title>
+                                        <mat-card-subtitle>
+                                            {{q.category.courseCode}} | {{q.category.title}}
+                                        </mat-card-subtitle>
+                                    </mat-card-header>
+                                    <mat-card-content>
+                                        <p class="truncate">{{q.description}}</p>
+                                    </mat-card-content>
+                                    <mat-card-actions>
+                                        <button mat-button color="primary" matTooltip="Summary Results"
+                                            (click)="openNew(q.qId)">
+                                            View
+                                        </button>
+                                        <button mat-button color="accent"
+                                            [routerLink]="'/user-dashboard/instructions/'+q.qId">
+                                            Start
+                                        </button>
+                                        <button mat-button color="accent">
+                                            {{q.numberOfQuestions}} Questions
+                                        </button>
+                                        <button mat-button color="accent">
+                                            {{q.maxMarks}} Marks
+                                        </button>
+                                    </mat-card-actions>
+                                </mat-card>
+                            </div>
+
+                            <div class="col-md-12" *ngIf="availablequizzes.length==0">
+                                <h1>No quizzes available for this course</h1>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
+        <ng-template #elseBlock>
+            <h1 class="text-center py-3">Register for a course first</h1>
+        </ng-template>
     </div>
-</div>
-<ng-template #elseBlock> <h1>Go and Register for a course before</h1></ng-template>
 </mat-card>
 
+<!-- Results Dialog -->
+<p-dialog [(visible)]="productDialog" [style]="{width: '300px', height:'550px'}" class="container text-center"
+    header="Quiz Summary">
+    <!-- Dialog loading spinner -->
+    <!-- <mat-spinner style="margin-right: 30px;" *ngIf="isLoadingReportData" diameter="40" class="my-3 mx-auto"></mat-spinner> -->
 
-
-<!-- {{availablequizzes | json}} -->
-<!-- Display the summary result in a dialog -->
-<p-dialog [(visible)]="productDialog" [style]="{width: '300px', height:'550px'}" class=" container text-center"
-    header="This is the quiz summary">
-
-    <mat-card *ngIf="reportData">
-        <table *ngFor="let r of reportData">
+    <mat-card *ngIf="reportData && !isLoadingReportData">
+        <table class="w-100">
             <tr>
-                <th>Name </th>
+                <th>Name</th>
                 <th>Quiz</th>
                 <th>Marks</th>
                 <th>Status</th>
-
             </tr>
-            <tr>
+            <tr *ngFor="let r of reportData">
                 <td>{{r.user.lastname}} {{r.user.firstname}}</td>
                 <td>{{r.quiz.title}}</td>
                 <td>{{r.marks}}</td>
                 <td>{{r.progress}}</td>
             </tr>
         </table>
-        <div class=" container text-center" *ngIf="reportData.length==0">
-            <h1>No Results Summary, Take quiz before!</h1>
+        <div class="text-center py-3" *ngIf="reportData.length==0">
+            <h3>No results available</h3>
         </div>
     </mat-card>
 </p-dialog>
-
-
