--- a/src/app/pages/user/load-quiz/load-quiz.component.html
+++ b/src/app/pages/user/load-quiz/load-quiz.component.html
@@ -1,32 +1,30 @@
-<!-- <ngx-ui-loader fgsColor="#ff4081" pbColor="#ff4081" textColor="#ff4081" pbThickness="6"
-  text="Loading information!"></ngx-ui-loader>
+<mat-card class="quiz-summary-card">
+  <!-- Loading indicator for initial report data -->
+
+  <div *ngIf="isLoadingReports" class="loading-container">
+    <button mat-raised-button color="accent" class="loading-button">
+      <div class="button-content">
+        <span>Loading Courses ...</span>
+      </div>
+    </button>
+  </div>
 
 
-<div ngxUiLoaderBlurred (blur)="10">
 
 
-    
-</div>  -->
 
 
-  <!-- {{reportData |json}}
-  <hr> -->
-  <!-- {{userRecords | json}} -->
-  <!-- 
-  <hr>
 
-  {{availablequizzes | json}} -->
-
-  <mat-card>
-    <div *ngIf="reports.length > 0; else elseBlock">
-      <h4 class="">Quiz Taken Summary</h4>
-
+  <!-- Main content when reports are loaded -->
+  <div *ngIf="!isLoadingReports">
+    <div *ngIf="reports.length > 0; else noQuizzesBlock">
+      <h4 class="section-title">Quiz Taken Summary</h4>
       <div class="container">
         <div class="row">
-          <div class="col-md-2">
+          <!-- Course selection column -->
+          <div class="col-md-2 course-selection">
             <form>
-              <br />
-              <mat-form-field appearance="fill" class="">
+              <mat-form-field appearance="fill">
                 <mat-label>Select Course</mat-label>
                 <mat-select name="category" [(ngModel)]="categories.cid" (selectionChange)="onQuizOptionSelected()">
                   <mat-option *ngFor="let c of reports" [value]="c.quiz.category.cid">
@@ -36,83 +34,85 @@
               </mat-form-field>
             </form>
           </div>
-          <div class="col-md-9 offset-md-1">
-            <div class="row mt20" *ngIf="availablequizzes">
-              <div class="col-md-6 mt20" *ngFor="let q of availablequizzes">
-                <!-- <h1 class="mt20">Quizzes Available</h1> -->
-                <mat-card mb20>
+          <!-- Quizzes display column -->
+          <div class="col-md-9 offset-md-1 quizzes-display">
+
+
+            <div *ngIf="isLoadingQuizzes" class="loading-container">
+              <button mat-raised-button color="primary" class="loading-button">
+                <div class="button-content">
+                  <mat-spinner diameter="30" class="loading-spinner"></mat-spinner>
+
+                  <span>Loading Quiz(s) ...</span>
+                </div>
+              </button>
+            </div>
+
+            <!-- Loading indicator for quizzes -->
+            <!-- Quizzes list -->
+            <div class="row quiz-list" *ngIf="availablequizzes && !isLoadingQuizzes">
+              <!-- Quiz cards -->
+              <div class="col-md-6 quiz-card" *ngFor="let q of availablequizzes">
+                <mat-card>
                   <mat-card-header>
-                    <div mat-card-avatar class="exmple-header-image">
-                    </div>
-                    <mat-card-title>
-                      {{q.title}}
-                    </mat-card-title>
+                    <div mat-card-avatar class="quiz-avatar"></div>
+                    <mat-card-title>{{q.title}}</mat-card-title>
                     <mat-card-subtitle>
                       {{q.category.courseCode}} | {{q.category.title}}
                     </mat-card-subtitle>
                   </mat-card-header>
                   <mat-card-content>
-                    <p class="truncate"> {{q.description}}</p>
+                    <p class="quiz-description">{{q.description}}</p>
                   </mat-card-content>
-                  <mat-card-action>
-                    <button mat-button color="primary" matTooltip="Summary Results"
-                      aria-label="Button that displays a tooltip when focused or hovered over"
-                      (click)="openNew(q.qId)">View Summary</button>
-
+                  <mat-card-actions>
+                    <button mat-button color="primary" matTooltip="Summary Results" aria-label="View summary"
+                      (click)="openNew(q.qId)">
+                      View Summary
+                    </button>
                     <button mat-button color="accent" (click)="onPrintClick($event, q.qId)"
-                      [disabled]="disabledButtons[q.qId]" [class.disabled-button]="disabledButtons[q.qId]"
-                      [disabled]="isPrintDisabled">Print Results</button>
-                  </mat-card-action>
+                      [disabled]="disabledButtons[q.qId] || isPrintDisabled"
+                      [class.disabled-button]="disabledButtons[q.qId]">
+                      Print Results
+                    </button>
+                  </mat-card-actions>
                 </mat-card>
               </div>
-              <div class="col-md-12" *ngIf="availablequizzes.length==0">
-                <!-- <mat-card>
-                      <mat-card-content> -->
+              <!-- Empty state -->
+              <div class="col-md-12 empty-state" *ngIf="availablequizzes.length === 0">
                 <h1>Select quiz to print or view summary</h1>
-                <!-- </mat-card-content>
-                  </mat-card> -->
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <ng-template #elseBlock>
-      <h1>You have not taken any quiz yet.</h1>
-    </ng-template>
+  </div>
+  <!-- No quizzes taken block -->
+  <ng-template #noQuizzesBlock>
+    <h1 class="no-quizzes-message">You have not taken any quiz yet.</h1>
+  </ng-template>
+</mat-card>
+<!-- Quiz summary dialog -->
+<p-dialog [(visible)]="productDialog" [style]="{width: '300px', height: '550px'}" class="quiz-dialog"
+  header="Quiz Summary">
+  <mat-card *ngIf="reportData">
+    <table class="summary-table">
+      <tr>
+        <th>Objective</th>
+        <th>Theory</th>
+        <th>Status</th>
+      </tr>
+      <tr *ngFor="let r of reportData">
+        <td>{{r.marks}}</td>
+        <td>{{r.marksB}}</td>
+        <td>{{r.progress}}</td>
+      </tr>
+    </table>
+    <div class="no-results" *ngIf="reports.length === 0">
+      <h1>No results available. Please take a quiz first.</h1>
+    </div>
   </mat-card>
-
-
-
-
-  <p-dialog [(visible)]="productDialog" [style]="{width: '300px', height:'550px'}" class=" container text-center"
-    header="This is the quiz summary">
-
-    <mat-card *ngIf="reportData">
-      <table *ngFor="let r of reportData">
-        <tr>
-          <!-- <th>Name </th>
-          <th>Quiz</th> -->
-          <th>OBJ</th>
-          <th>Theory</th>
-          <th>Status</th>
-
-        </tr>
-        <tr>
-          <!-- <td>{{r.user.lastname}} {{r.user.firstname}}</td>
-          <td>{{r.quiz.title}}</td> -->
-          <td>{{r.marks}}</td>
-          <td>{{r.marksB}}</td>
-          <td>{{r.progress}}</td>
-
-
-        </tr>
-      </table>
-      <div class=" container text-center" *ngIf="reports.length==0">
-        <h1>No Results Summary, Take quiz before!</h1>
-      </div>
-    </mat-card>
-  </p-dialog>
+</p-dialog>
 
 
 
@@ -124,106 +124,15 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <!-- -------- START HEADER 2 w/ waves and typed text ------- -->
-  <!-- <header class="position-relative">
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-absolute bg-transparent shadow-none">
-      <div class="container">
-        <a class="navbar-brand text-white" href="javascript:;">Material Design</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-header-2" aria-controls="navbar-header-2" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar-header-2">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item">
-              <a class="nav-link text-white" href="javascript:;">
-                Home
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="javascript:;">
-                About Us
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="javascript:;">
-                Contact Us
-              </a>
-            </li>
-          </ul>
-  
-          <ul class="nav navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link text-white" href="https://twitter.com/CreativeTim">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white mx-2" href="https://www.facebook.com/CreativeTim">
-                <i class="fab fa-facebook"></i>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="https://www.instagram.com/CreativeTimOfficial">
-                <i class="fab fa-instagram"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="page-header min-vh-100" style="background-image: url(../../assets/img/bg9.jpg);" loading="lazy">
-      <span class="mask bg-gradient-info opacity-4"></span>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 text-center mx-auto">
-            <h1 class="text-white">Our company mission is to lead the <span class="text-white" id="typed"></span></h1>
-              <div id="typed-strings">
-                <h1>web development</h1>
-                <h1>mobile development</h1>
-                <h1>web design</h1>
-              </div>
-            <p class="lead text-white text-center pe-5 mt-4">The time is now for it to be okay to be great. People in this world shun people for being great. For being a bright color. </p>
-            <br />
-            <div class="buttons text-center">
-              <button type="button" class="btn btn-white">Contact Us</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header> -->
-  <!-- -------- END HEADER 2 w/ waves and typed text ------- -->
-
-  <!-- Mandatory init script -->
-  <script>
-    if (document.getElementById("typed")) {
-      var typed = new Typed("#typed", {
-        stringsElement: "#typed-strings",
-        typeSpeed: 70,
-        backSpeed: 50,
-        backDelay: 200,
-        startDelay: 500,
-        loop: true
-      });
-    }
-  </script>
-
-
-
-
-
-
+<script>
+  if (document.getElementById("typed")) {
+    var typed = new Typed("#typed", {
+      stringsElement: "#typed-strings",
+      typeSpeed: 70,
+      backSpeed: 50,
+      backDelay: 200,
+      startDelay: 500,
+      loop: true
+    });
+  }
+</script>
