--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -1,4 +1,4 @@
-        <!-- <mat-spinner *ngIf="isLoading" diameter="50" class="loading-spinner"></mat-spinner> -->
+<!-- <mat-spinner *ngIf="isLoading" diameter="50" class="loading-spinner"></mat-spinner> -->
 
 
 
@@ -43,17 +43,21 @@
 
                 <div *ngIf="questions.length>0">
                     <div *ngIf="questions">
-                        <mat-card class="cards" style="font-family: 'Times New Roman', Times, serif; font-size:18px; color: white;text-align: center; background-color: purple;">
+                        <mat-card class="cards"
+                            style="font-family: 'Times New Roman', Times, serif; font-size:18px; color: white;text-align: center; background-color: purple;">
                             <mat-label> SECTION A -{{(timeO * 60)/60}} minutes </mat-label>
                         </mat-card>
                     </div>
 
-                    <mat-card *ngFor="let q of questions| paginate:{itemsPerPage: tableSize, currentPage:page, totalItems:count}; let i = index" class="mt10">
+                    <mat-card
+                        *ngFor="let q of questions| paginate:{itemsPerPage: tableSize, currentPage:page, totalItems:count}; let i = index"
+                        class="mt10">
                         <mat-card-content>
                             <span class="no-select">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <p> <b> Q {{q.count}} </b> <span class="ml10" [innerHTML]="q.content"></span></p>
+                                        <p> <b> Q {{q.count}} </b> <span class="ml10" [innerHTML]="q.content"></span>
+                                        </p>
                                     </div>
                                 </div>
                                 <mat-divider></mat-divider>
@@ -87,10 +91,11 @@
                             </span>
                         </mat-card-content>
                     </mat-card>
-                    
+
                     <!-- PAGINATION -->
                     <div>
-                        <pagination-controls previousLabel="Prev" nextLabel="Next" (pageChange)="onTableDataChange($event)">
+                        <pagination-controls previousLabel="Prev" nextLabel="Next"
+                            (pageChange)="onTableDataChange($event)">
                         </pagination-controls>
                     </div>
                 </div>
@@ -98,24 +103,31 @@
                 <!-- subjective questions here -->
                 <div *ngIf="currentQuestions; else elseBlock">
                     <mat-card>
-                        <mat-card class="cards" style="font-family: 'Times New Roman', Times, serif; font-size:18px; color: white;text-align: center; background-color: purple;">
+                        <mat-card class="cards"
+                            style="font-family: 'Times New Roman', Times, serif; font-size:18px; color: white;text-align: center; background-color: purple;">
                             <mat-label> SECTION B -{{(timeT * 60)/60}} minutes </mat-label>
                         </mat-card>
 
                         <form>
-                            <mat-card class="cards" style=" margin: 20px;font-size:18px; color: white;text-align: center; background-color: rgb(86, 82, 82);">
+                            <mat-card class="cards"
+                                style=" margin: 20px;font-size:18px; color: white;text-align: center; background-color: rgb(86, 82, 82);">
                             </mat-card>
 
                             <div *ngFor="let question of currentQuestions; let i = index">
                                 <mat-card-content class="mat-card-content">
-                                    <input type="checkbox" [checked]="question.selected" (change)="onQuestionSelect(question)" disabled hidden>
+                                    <input type="checkbox" [checked]="question.selected"
+                                        (change)="onQuestionSelect(question)" disabled hidden>
                                     <mat-form-field class="mat-form-field" style="margin-top: -450px;">
                                         <mat-label>
                                             <span class="no-select">
                                                 {{question.quesNo}} {{ question.question }} {{question.marks}}
                                             </span>
                                         </mat-label>
-                                        <textarea class="input" [name]="'givenAnswer' + i" [(ngModel)]="question.givenAnswer" matInput rows="2" (ngModelChange)="saveAnswers()" (paste)="disablePaste($event)">
+                                        <!-- <textarea class="input" [name]="'givenAnswer' + i" [(ngModel)]="question.givenAnswer" matInput rows="2" (ngModelChange)="saveAnswers()" (paste)="disablePaste($event)"> -->
+                                        <textarea class="input" [name]="'givenAnswer' + i"
+                                            [(ngModel)]="question.givenAnswer" matInput rows="2"
+                                            (ngModelChange)="saveAnswers()">
+
                                         </textarea>
                                     </mat-form-field>
                                 </mat-card-content>
@@ -128,18 +140,27 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="pagination-controls">
-                                                <button type="submit" mat-raised-button color="primary" (click)="prevPage()" [disabled]="currentPage === 0">Previous</button>
-                                                <span style="color: blueviolet; font-size: large; border: 2px solid red;">
+                                                <button type="submit" mat-raised-button color="primary"
+                                                    (click)="prevPage()"
+                                                    [disabled]="currentPage === 0">Previous</button>
+                                                <span
+                                                    style="color: blueviolet; font-size: large; border: 2px solid red;">
                                                     {{ prefixes[currentPage] }} of {{ prefixes[prefixes.length-1]}}
                                                 </span>
-                                                <button type="submit" mat-raised-button color="primary" (click)="nextPage()" [disabled]="currentPage === prefixes.length - 1">Next</button>
+                                                <button type="submit" mat-raised-button color="primary"
+                                                    (click)="nextPage()"
+                                                    [disabled]="currentPage === prefixes.length - 1">Next</button>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
-                                            <mat-card-title style="font-size: 16px; font-family: 'Times New Roman', Times, serif; color: blueviolet;">Select {{numberOfQuestionsToAnswer}} set(s) of questions answered!</mat-card-title>
+                                            <mat-card-title
+                                                style="font-size: 16px; font-family: 'Times New Roman', Times, serif; color: blueviolet;">Select
+                                                {{numberOfQuestionsToAnswer}} set(s) of questions
+                                                answered!</mat-card-title>
                                             <div *ngIf="prefixes.length > 0" class="prefix-container">
                                                 <div *ngFor="let prefix of prefixes" class="prefix-item">
-                                                    <mat-checkbox [checked]="selectedQuestions[prefix]" (change)="togglePrefixSelection(prefix)">
+                                                    <mat-checkbox [checked]="selectedQuestions[prefix]"
+                                                        (change)="togglePrefixSelection(prefix)">
                                                         {{ prefix }}
                                                     </mat-checkbox>
                                                 </div>
@@ -152,7 +173,8 @@
                     </mat-card>
                     <!-- BUTTON IF SUBJECTIVE IS INCLUSIVE -->
                     <div class="contianer centerbtn mt20 mb20">
-                        <button mat-raised-button color="primary" (click)="submitAllQuiz()" [disabled]="isSubmitDisabled">Submit Quiz</button>
+                        <button mat-raised-button color="primary" (click)="submitAllQuiz()"
+                            [disabled]="isSubmitDisabled">Submit Quiz</button>
                     </div>
                 </div>
                 <!-- BUTTON TO SHOW IS SUBJECTIVE IS NOT INCLUDED -->
